# My_Video_Downloader

./: .gitignore  README.md  download_videos.py  pyproject.toml  url.dump.py
[videos]/: [Philipp Hagemeister]-[20121002]-[youtube-dl test video ''_ä↭𝕐]-[BaW_jenozKc].info.json
url_dump/: main.py
url_dump/includes/: __init__.py  errors.py
video_download/: main.py
