[tool.poetry]
name = "my_video_downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"
youtube_dl = "^2021.2.22"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool. poetry.scripts]
url_dump = "url_dump.main:start"
video_download = "video_download.main:start"